log
Wed 20 Mar 2024 12:23:57 AM UTC: 
 tests:  0|5
total_score: 0/70
937f263
Wed 20 Mar 2024 12:31:01 AM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:14: error: invalid use of undefined type ‘struct List’
   60 |     suma += L[i];
      |              ^
exercises.c:60:13: error: invalid use of incomplete typedef ‘List’
   60 |     suma += L[i];
      |             ^
Compilation failed
15d82d7
Wed 20 Mar 2024 01:07:35 AM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:71:3: error: expected expression before ‘return’
   71 |   return suma;
      |   ^~~~~~
exercises.c:65:7: error: variable ‘suma’ set but not used [-Werror=unused-but-set-variable]
   65 |   int suma = 0;
      |       ^~~~
exercises.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
43ff625
Wed 20 Mar 2024 01:07:45 AM UTC: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  1|4
total_score: 10/70
e4769d0
Wed 20 Mar 2024 01:15:15 AM UTC: 
 exercises.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  1|4
total_score: 10/70
2b48f91
Wed 20 Mar 2024 01:47:13 AM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
6602435
